p2/confs/dep2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-deux
  template:
    metadata:
      labels:
        app: hello-deux
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbower/hello-kubernetes:1.7
          ports:
          - containerPort: 8080
