p2/confs/dep3.yml
apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  selector:
    app: app-three
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.7
          ports:
          - containerPort: 8080
