p2/confs/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-un
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector: # This selector field is indented correctly at the same level as the spec field
    app: hello-un
---
apiVersion: v1
kind: Service
metadata:
  name: hello-deux
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-deux
---
apiVersion: v1
kind: Service
metadata:
  name: hello-trois
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector: # This selector field is indented correctly at the same level as the spec field
    app: hello-trois
